<resources>
    <string name="app_name">PurdueCircle307</string>
    <string name="home">Home</string>
    <string name="friends">Friends</string>
    <string name="tags">Tags</string>
    <string name="find_friends">Find Friends</string>
    <string name="find_tags">Find Tags</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="saved_posts">Saved Posts</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="imageview">imageView</string>
    <string name="profile">Profile</string>
</resources>