<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/home"/>
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/profile"
        android:title="@string/profile" />
    <item
        android:id="@+id/nav_friends"
        android:title="@string/friends"
        android:icon="@drawable/friends"/>
    <item
        android:id="@+id/nav_messages"
        android:title="Messages"
        android:icon="@drawable/send_message"
        />
    <item
        android:id="@+id/nav_tags"
        android:title="@string/tags"
        android:icon="@drawable/tags"/>
    <item
        android:id="@+id/nav_find_friends"
        android:title="@string/find_friends"
        android:icon="@drawable/findfriends"/>
    <item
        android:id="@+id/nav_find_tags"
        android:title="@string/find_tags"
        android:icon="@drawable/findtags"/>
    <item
    android:id="@+id/nav_saved_posts"
    android:title="@string/saved_posts"
    android:icon="@drawable/unsave"/>
    <item
        android:id="@+id/nav_settings"
        android:title="@string/edit_profile"
        android:icon="@drawable/settings"/>
    <item
        android:id="@+id/nav_logout"
        android:title="@string/logout"
        android:icon="@drawable/logout"/>

</menu>